@@ -21,7 +21,9 @@
         <module>modules/ai</module>
         <module>modules/patient</module>
         <module>modules/doctor</module>
+        <module>modules/registration</module>
         <module>modules/admin</module>
+        <module>modules/medical-order</module>
         <module>application</module>
         <module>integration</module>
     </modules>
@@ -34,6 +36,7 @@
         <springdoc.version>2.5.0</springdoc.version>
         <h2.version>2.2.224</h2.version>
         <lombok.version>1.18.32</lombok.version>
+        <jjwt.version>0.12.5</jjwt.version>
     </properties>
 
     <dependencies>
@@ -70,6 +73,16 @@
             <dependency>
                 <groupId>com.aimedical</groupId>
                 <artifactId>ai-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aimedical</groupId>
+                <artifactId>registration</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aimedical</groupId>
+                <artifactId>medical-order</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -134,7 +147,15 @@
                     <ignoredUnusedDeclaredDependencies>
                         <ignoredUnusedDeclaredDependency>com.aimedical:ai-api</ignoredUnusedDeclaredDependency>
                         <ignoredUnusedDeclaredDependency>com.aimedical:common-module-api</ignoredUnusedDeclaredDependency>
+                        <ignoredUnusedDeclaredDependency>com.aimedical:medical-order</ignoredUnusedDeclaredDependency>
                     </ignoredUnusedDeclaredDependencies>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
